# Distributed-Key-Value-Store

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
bench/: _common.sh  bench_multinode.sh  bench_throughput.sh  run_all.sh
benchmarks/: CMakeLists.txt
configs/: kvstore.example.yaml
docker/: Dockerfile  docker-compose.yml
docs/: README.md  architecture.md  benchmarks.md  design-decisions.md  limitations.md  operations.md  protocol.md  replication.md  storage.md  testing.md
include/kvstore/cache/: eviction_policy.hpp  lru_cache.hpp
include/kvstore/concurrency/: lock_free_queue.hpp  scheduler.hpp  thread_pool.hpp
include/kvstore/metrics/: metrics_registry.hpp  profiler_hooks.hpp
include/kvstore/network/: client_session.hpp  connection_pool.hpp  tcp_server.hpp
include/kvstore/persistence/: persistence_manager.hpp  snapshot.hpp  write_ahead_log.hpp
include/kvstore/protocol/: command.hpp  protocol_parser.hpp
include/kvstore/replication/: follower.hpp  leader.hpp  log_shipper.hpp  replication_manager.hpp
include/kvstore/server/: server.hpp
include/kvstore/storage/: entry.hpp  kv_engine.hpp  ttl_index.hpp
include/kvstore/utils/: config.hpp  logger.hpp
scripts/: build.sh  format.sh  test.sh
src/: CMakeLists.txt  failover.cpp  failover.h  main.cpp  protocol.cpp  protocol.h  rebalance.cpp  rebalance.h  replication.cpp  replication.h  server.cpp  server.h  sharded_store.cpp  sharded_store.h  sharding.cpp  sharding.h  snapshot.cpp  snapshot.h  store.cpp  store.h  wal.cpp  wal.h
src/cache/: lru_cache.cpp
src/concurrency/: thread_pool.cpp
src/metrics/: metrics_registry.cpp
src/network/: tcp_server.cpp
src/persistence/: persistence_manager.cpp
src/protocol/: protocol_parser.cpp
src/replication/: replication_manager.cpp
src/server/: server.cpp
src/storage/: kv_engine.cpp
src/utils/: logger.cpp
tests/: CMakeLists.txt  crash_recovery_test.cpp  failover_test.cpp  integration_test.cpp  kv_client.cpp  kv_client.h  protocol_test.cpp  rebalance_test.cpp  replication_test.cpp  sharding_test.cpp  snapshot_test.cpp  storage_test.cpp  wal_test.cpp
tests/integration/: server_smoke_test.cpp
tests/stress/: stress_smoke_test.cpp
tests/unit/: compile_smoke_test.cpp
tools/: CMakeLists.txt  bench_concurrency.cpp  bench_concurrency.sh  bench_rebalance.cpp  bench_rebalance.sh  bench_restore.cpp  bench_restore.sh  bench_throughput.cpp
